# lora_home

./: .gitignore  build.txt  gateway.txt
common/: CMakeLists.txt  Kconfig  build.txt
common/lorawan/: eui.c  se.c
common/scripts/: .gitignore  decode.js  fuota.py  gate_ctrl.py  incr_build.py  remote_const.py  remote_dev.py  remote_svc.py
common/src/: app_protocol.h  fuota.c  fuota.h  isr_table.c  keys.h  pm.h  relay.c
common/src/atsamd21/: keys.c  pm.c
common/src/esp32s3/: keys.c
lora_ctrl/: CMakeLists.txt  Kconfig  VERSION  log.txt  pinout.ods  prj.conf
lora_ctrl/boards/: adafruit_feather_m0_lora.conf  adafruit_feather_m0_lora.overlay
lora_ctrl/cad/: remote.FCStd
lora_ctrl/dts/common/: feather-m0-flash-layout.dtsi
lora_ctrl/lorawan/: eui.c  eui.h
lora_ctrl/src/: adc.c  adc.h  app_protocol.h  buttons.c  buttons.h  fuota.c  keys.c  keys.h  led_behaviors.c  main.c  pwm.c  pwm.h
lora_ctrl/sysbuild/: mcuboot.conf  mcuboot.overlay
lora_garage/: CMakeLists.txt  VERSION  openocd.cfg  prj.conf  sysbuild.conf
lora_garage/boards/: xiao_esp32s3_procpu.overlay
lora_garage/src/: main.c
lora_garage/sysbuild/: mcuboot.conf
lora_gate/: CMakeLists.txt  VERSION  prj.conf  sysbuild.cmake
lora_gate/boards/: xiao_esp32s3_procpu.overlay
lora_gate/src/: app.c  app.h  main.c  renogy.c  renogy.h  renogy_internal.h
lora_gate/sysbuild/: mcuboot.conf  mcuboot.overlay
lora_relay/: CMakeLists.txt  notes.txt  prj.conf
lora_relay/boards/: xiao_esp32s3_procpu.overlay
lora_relay/lorawan/: eui.c
lora_relay/scripts/: decode.js  remote_svc.py
lora_relay/src/: fuota.c  keys.c  keys.h  main.c  relay.c  relay.h  renogy.c  renogy.h  renogy_internal.h
lora_relay/sysbuild/: mcuboot.conf
sam0_pwr_test/: CMakeLists.txt  prj.conf
sam0_pwr_test/boards/: adafruit_feather_m0_lora.overlay
sam0_pwr_test/src/: buttons.c  main.c  pwm.c  pwm.h
sam0_pwr_test/sysbuild/: mcuboot.conf
